--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
 
+    compile 'com.roughike:bottom-bar:2.1.1'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.ms-square:etsyblur:0.1.3'
@@ -41,4 +43,5 @@ dependencies {
     compile('com.github.florent37:materialviewpager:1.2.0@aar') {
         transitive = true
     }
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
