--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,24 +25,26 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+
+
+
+
+    compile('com.github.florent37:materialviewpager:1.2.0@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
-
     compile 'com.roughike:bottom-bar:2.1.1'
-
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     compile 'com.ms-square:etsyblur:0.1.3'
-
     compile 'com.jakewharton:butterknife:7.0.1'
-
+    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     testCompile 'junit:junit:4.12'
-
-    compile('com.github.florent37:materialviewpager:1.2.0@aar') {
-        transitive = true
-    }
-    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
