--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,11 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.roughike:bottom-bar:2.1.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.ms-square:etsyblur:0.1.3'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
