--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="homepunk.lesson.first.di.App"
+        android:name="homepunk.lesson.first.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_watch_later"
         android:label=""
