--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,47 +24,56 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
     }
 }
 
 apply plugin: 'com.neenbedankt.android-apt'
 
+def dbflow_version = "4.0.0-beta1"
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-
-
-
-
-    compile('com.github.florent37:materialviewpager:1.2.0@aar') {
-        transitive = true
-    }
+//  Android default dependencies
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
 
+//  Network dependencies
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
 
+//  Database dependencies
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
+//  Dependency injections
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.dagger:dagger:2.7'
     apt 'com.google.dagger:dagger-compiler:2.7'
 
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+//  Drawable, images dependencys
     compile 'com.squareup.picasso:picasso:2.5.2'
-
-    compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.ms-square:etsyblur:0.1.3'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.android.support:support-v4:25.1.0'
+
+//  Custom ui librarys
+    compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile('com.github.florent37:materialviewpager:1.2.0@aar') {
+        transitive = true
+    }
+
+//  Unknows dependencies
+    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+
     testCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
