--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
 
+//  RxAndroid
+    compile 'io.reactivex:rxandroid:0.25.0'
+
 //  Dependency injections
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.dagger:dagger:2.7'
