--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,8 @@ dependencies {
 //  Custom ui librarys
     compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile('com.github.florent37:materialviewpager:1.2.0@aar') {
-        transitive = true
-    }
     compile 'com.dinuscxj:recyclerrefreshlayout:2.0.3'
+    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
 
 //  Unknows dependencies
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
@@ -79,5 +77,4 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
