--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,53 +36,54 @@ buildscript {
 
 apply plugin: 'com.neenbedankt.android-apt'
 
+// Realm
+apply plugin: 'realm-android'
+
 //  RetroLambda
 apply plugin: 'me.tatarka.retrolambda'
 
-def dbflow_version = "4.0.0-beta1"
 dependencies {
-//  Android default dependencies
+    // Network dependencies
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+
+    // RxAndroid
+    compile 'io.reactivex:rxandroid:0.25.0'
+
+    // Logging
+    compile 'com.jakewharton.timber:timber:4.5.1'
+
+    // Dependency injections
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.dagger:dagger:2.7'
+    apt 'com.google.dagger:dagger-compiler:2.7'
+
+    // Drawable, images dependencys
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.ms-square:etsyblur:0.1.3'
+
+    // Ui dependencys
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
-
-//  Network dependencies
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
-//  Database dependencies
-    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-
-//  RxAndroid
-    compile 'io.reactivex:rxandroid:0.25.0'
-
-//  Dependency injections
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.dagger:dagger:2.7'
-    apt 'com.google.dagger:dagger-compiler:2.7'
-
-//  Drawable, images dependencys
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.ms-square:etsyblur:0.1.3'
-
-//  Custom ui librarys
     compile 'com.roughike:bottom-bar:2.1.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.dinuscxj:recyclerrefreshlayout:2.0.3'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 
-//  Unknows dependencies
+    // Unknows dependencies
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
 
+    // Test
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'junit:junit:4.12'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
