--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+    apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
@@ -73,11 +73,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.roughike:bottom-bar:2.1.1'
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile 'com.dinuscxj:recyclerrefreshlayout:2.0.3'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'br.com.mauker.materialsearchview:materialsearchview:1.2.0'
 
     // Unknows dependencies
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
