--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    compile 'org.jsoup:jsoup:1.10.2'
+    compile 'com.ekchang.jsouper:retrofit-converter-jsouper:0.0.3-SNAPSHOT'
+    compile 'com.ekchang.jsouper:jsouper:0.0.3-SNAPSHOT'
 
     // RxAndroid
     compile 'io.reactivex:rxandroid:0.25.0'
@@ -78,6 +81,7 @@ dependencies {
     compile 'br.com.mauker.materialsearchview:materialsearchview:1.2.0'
     compile 'com.balysv.materialmenu:material-menu-toolbar:1.5.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
 
     // Unknows dependencies
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
